# monitoring_project_de

./: .gitignore  README.md  logging_example.py  loguru.txt  loguru_example.py  loguru_sentry.py  main.py  pyproject.toml  sentry.py  sentry_logging.py
service/: transformation.py
src/: logging.txt  logging_example.py  loguru_example.py  loguru_sentry.py  sentry.py  sentry_logging.py
utility/logger_loguru/: logger_config.py  logger_decorator.py
utility/logger_sentry/: logger_config.py  logger_decorator.py
utility/logger_standard/: logger_config.py
